--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="estilos/estilos.css">
 	<body>		
 		<h1 class="fondoBlanco">HTML &amp; CSS: Curso práctico avanzado</h1>
-		<img src="imagenes/descarga.png" alt="">
+		<img src="imagenes/descarga002.png" alt="">
 		<h2 class="fondoAzul">Datos del libro</h2>
 		<ul id="l1">
 			<li>Título: HTML &amp; CSS: Curso práctico avanzado</li>
